--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,11 @@
 <!-- ----------contact---------------- -->
 <div class="contact-tab">
     <div class="title-section">
-        <h1 style="color:white; margin-top:7%; font-weight:600; font-size:4.5rem;" class="heading">GET IN <span style="color:magenta;">TOUCH!</span></h1>
+        <h1 style="color:white; font-weight:600; font-size:40px;" class="heading">GET IN <span style="color:magenta;">TOUCH!</span></h1>
         <span class="title-bg">CONTACT</span>
     </div>
 
-    <div class="container">
+    <div class="container py-4">
         <div class="row py-4">
             <div class="col-12 col-lg-4 right-t">
                 <h3 style="font-size: 30px;font-weight: 800;" class="custome title">DON'T BE SHY!</h3>
@@ -92,7 +92,7 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
-    <script src="script.js"></script>
+<script src="./js/script.js"></script>  
     
 <script>
     const form=document.querySelector('form');
