--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="row mb-4 py-5">
-            <div class=" col-sm-12 col-md-6 col-lg-4 mb-5">
+            <div class=" col-12 col-md-6 col-lg-4 mb-5">
                 <div class="card">
                     <img class="card-img-top" src="images/kali.png" alt="Card image cap">
                     <div class="card-body">
@@ -55,9 +55,9 @@
                     </div>
                 </div>
             </div>
-            <div class=" col-sm-12 col-md-6 col-lg-4 mb-5">
+            <div class=" col-12 col-md-6 col-lg-4 mb-5">
                 <div class="card">
-                    <img class="card-img-top" src="images/kali.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/reverse.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Reverse Engineering</h5>
                         <p class="card-text">To Use msfvenom to exploit the Windows system and get the Meterpreter session.</p>
@@ -65,9 +65,9 @@
                     </div>
                 </div>
             </div>    
-            <div class=" col-sm-12 col-md-6 col-lg-4 mb-5">
+            <div class=" col-12 col-md-6 col-lg-4 mb-5">
                 <div class="card">
-                    <img class="card-img-top" src="images/kali.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/cloudc.webp" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Cloud Computing</h5>
                         <p class="card-text">To Use msfvenom to exploit the Windows system and get the Meterpreter session.</p>
@@ -76,9 +76,9 @@
                 </div>
             </div>
 
-            <div class=" col-sm-12 col-md-6 col-lg-4 mb-5">
+            <div class=" col-12 col-md-6 col-lg-4 mb-5">
                 <div class="card">
-                    <img class="card-img-top" src="images/kali.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/networking.webp" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Networking</h5>
                         <p class="card-text">To Use msfvenom to exploit the Windows system and get the Meterpreter session.</p>
@@ -86,9 +86,9 @@
                     </div>
                 </div>
             </div>
-            <div class=" col-sm-12 col-md-6 col-lg-4 mb-5">
+            <div class=" col-12 col-md-6 col-lg-4 mb-5">
                 <div class="card">
-                    <img class="card-img-top" src="images/kali.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/digital.webp" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Digital Forensics</h5>
                         <p class="card-text">To Use msfvenom to exploit the Windows system and get the Meterpreter session.</p>
@@ -118,7 +118,7 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
-    <script src="script.js"></script>
+<script src="./js/script.js"></script>  
     
 <script>
     const form=document.querySelector('form');
