--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
-    <script src="script.js"></script>
+<script src="./js/script.js"></script>  
     
 <script>
     const form=document.querySelector('form');
