--- a/projects.html
+++ b/projects.html
@@ -35,16 +35,16 @@
             <div class="portfolio-box">
                 <img src="images/passwordcracker.webp" alt="Password Cracker">
                 <div class="portfolio-layer">
-                    <h4>Password Cracker Projects</h4>
-                    <p>There are many ways to crack a password, among them there is “the brute force attack” method. </p>
-                    <a href="https://github.com/raushanctf/Digitalclock"target="_blank"><i class="bx bx-link-external"></i></a>
+                    <h4>Digital marketing Projects</h4>
+                    <p>I worked on optimizing a company’s website using keyword research, on-page SEO techniques, and backlink building to improve its Google search ranking, which resulted in a 40% increase in organic traffic within 3 months.". </p>
+                    <a href="https://github.com/raushanctf/Digital-Marketing"target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="images/antivirus.webp" alt="Antivirus Projects ">
                 <div class="portfolio-layer">
                     <h4>Antivirus Detection tools</h4>
-                    <p>A simple antivirus projects coded in capable of scanning files and identifying potential
+                    <p>A simple antivirus project coded in a language capable of scanning files and identifying potential
                         malware or suspicious content.</p>
                     <a href="https://github.com/raushanctf/Digitalclock"target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
@@ -53,15 +53,15 @@
                 <img src="images/metasploitable.jpg" alt="metasploitable machine">
                 <div class="portfolio-layer">
                     <h4>Metasploitable Projects</h4>
-                    <p>In this project we did Identify and exploit vulnerabilities in a safe lab environment.we used Test security tools like Metasploit Framework, Nmap, Nikto, and dirbuster. </p>
-                    <a href="https://github.com/raushanctf/Digitalclock"target="_blank"><i class="bx bx-link-external"></i></a>
+                    <p>In this project, we identified and exploited vulnerabilities in a safe lab environment. We used Test security tools like Metasploit Framework, Nmap, Nikto, and dirbuster. </p>
+                    <a href="https://github.com/raushanctf/Metasploitable2"target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="images/webauth.jpeg" alt="Web-Based authentication">
                 <div class="portfolio-layer">
                     <h4>Web-based Authentication Projects</h4>
-                    <p>In this Projects we have provide security the process of verifying a user's identity before granting access to a website or web application.</p>
+                    <p>In this project, we have provided security by verifying a user's identity before granting access to a website or web application.</p>
                     <a href="https://github.com/raushanctf/Digitalclock" target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <img src="images/Digitalclock.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Digital Clock Project</h4>
-                    <p>we Developed Digital Clock simple and Creative with the help of techonologies like HTML, CSS and Javascripts.</p>
+                    <p> We developed a Digital Clock, simple and Creative, with the help of technologies like HTML, CSS , and JavaScript.</p>
                     <a href="https://github.com/raushanctf/Digitalclock" target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
@@ -78,8 +78,8 @@
                 <img src="images/passwordgen.webp" alt="Password Generation Tools">
                 <div class="portfolio-layer">
                     <h4>Password Generation tools.</h4>
-                    <p>This is Password Geneartion tools Created Using Python and his library...</p>
-                    <a href="https://github.com/raushanctf/Digitalclock"target="_blank"><i class="bx bx-link-external"></i></a>
+                    <p>This is a Password Generation tool created by Python and its library...</p>
+                    <a href="https://github.com/raushanctf/Password-generation-tools"target="_blank"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
             
@@ -112,13 +112,13 @@
     const form=document.querySelector('form');
     function sendEmail(){
         Email.send({
-            Host : "smtp.elasticemail.com",
-            Username : "@gmail.com",
-            Password : "",
+            Host: "smtp.elasticemail.com",
+            Username: "@gmail.com",
+            Password: "",
             To : '@gmail.com',
-            From : "@gmail.com",
-            Subject : "This is the sub",
-            Body : "This is the body"
+            From: "@gmail.com",
+            Subject: "This is the sub",
+            Body: "This is the body."
         }).then(
           message => alert(message)
         );
